@@ -159,7 +159,7 @@ SvnAnt's JAR file to perform that registration follows:</p>
 		<td><a href="#ignore">ignore</a></td>
 		<td><a href="#keywordsremove">keywordsremove</a></td>
 		<td><a href="#propset">propset</a></td>
-		<td></td>
+		<td><a href="#wcVersion">wcVersion</a></td>
 	</tr>
 	</table>
 <p> </p>
@@ -1131,6 +1131,103 @@ Parameters specified as nested elements :
 Filesets are used to select sets of files to update. 
 </li>
 </ul>
+
+<H3><a name="wcVersion">wcVersion</a></H3>
+<p>Retrieves a state of the working copy. Similar to the svn's utility svnversion, just providing more.<BR>
+Crawls the working copy and retrieves the maximum revision number, revision range if workingCopy is mixed etc.
+</p>
+<table>
+	<tr>
+		<td>Attribute</td>
+		<td>Description</td>
+		<td>Required</td>
+	</tr>
+	<tr>
+		<td>path</td>
+		<td>a path to the working copy</td>
+		<td>Yes</td>
+	</tr>
+	<tr>
+		<td>prefix</td>
+		<td>a string which will be prefixed to output properties set/filled by this command</td>
+		<td>No</td>
+	</tr>
+</table>
+
+<p>The command fill set the following properties: (with optional prefix applied)</p>
+
+<table>
+	<tr>
+		<td>Property name</td>
+		<td>Description</td>
+	</tr>
+	<tr>
+		<td>repository.url</td>
+		<td>URL of the repository of the working copy root</td>
+	</tr>
+	<tr>
+		<td>repository.path</td>
+		<td>path in the repository</td>
+	</tr>
+	<tr>
+		<td>revision.max</td>
+		<td>the highest revision number in the working copy</td>
+	</tr>
+	<tr>
+		<td>revision.max-with-flags</td>
+		<td>the highest revision number in the working copy plus flags (M - modified, X - mixed)</td>
+	</tr>
+	<tr>
+		<td>revision.range</td>
+		<td>the revision range (in mixed wc), similar to svnversion format. (e.g. 1000:1010MX)</td>
+	</tr>
+	<tr>
+		<td>committed.max</td>
+		<td>the highest 'last committed revision'</td>
+	</tr>
+	<tr>
+		<td>committed.max-with-flags</td>
+		<td>the highest 'last committed revision' plus flags (M, X)</td>
+	</tr>
+	<tr>
+		<td>modified</td>
+		<td>set to "true" if working copy is modified, property not set otherwise</td>
+	</tr>
+	<tr>
+		<td>mixed</td>
+		<td>set to "true" if working copy is mixed, property not set otherwise</td>
+	</tr>
+</table>
+<p>
+An example of the properties that would be set in a sample working copy (with modifications):<br>
+(with prefix="svn.")
+<pre>
+svn.repository.url -> https://server/repos/branches/1.2.x
+svn.repository.path -> /repos/branches/1.2.x
+svn.revision.max -> 676
+svn.revision.max-with-flags -> 676M
+svn.revision.range -> 676M
+svn.committed.max -> 651
+svn.committed.max-with-flags -> 651M
+svn.modified -> true
+</pre>
+Example output in case of mixed and modified working copy:
+(without prefix set)
+<pre>
+repository.url -> https://server/repos/branches/1.2.x
+repository.path -> /repos/branches/1.2.x
+revision.max -> 676
+revision.max-with-flags -> 676MX
+revision.range -> 673:676M
+svn.committed.max -> 651
+svn.committed.max-with-flags -> 651M
+modified -> true
+mixed -> true
+</pre>
+</p>
+
+
+
 
 <H2>Examples</H2>
 
