@@ -5,7 +5,8 @@
 - Added "url" option to <propget> command
 - Added "lastChangedDateProperty" to <status> command
 - Added "dateFormatter" attribute to <svn> task
+- Added the <wcVersion> command
 
-- Added
+- Added ..... the selectors ...
   
 * 1.0.0
